Changed body width to max width to prevent unwanted horizontal scrolling

--- a/Task2/styles.css
+++ b/Task2/styles.css
@@ -8,7 +8,7 @@ body{
    display: flex;
    flex-direction: column;
    align-items: center;
-   width: 100vw;
+   max-width: 100vw;
    min-height: 100vh;
 }
 
@@ -268,6 +268,10 @@ form button{
 }
 
 @media screen and (min-width :768px) {
+   header{
+      padding: 1rem 15%;
+
+   }
    header h1{
       font-size: 1.5rem;
    }
